--- a/colab-notebooks/notebook.ipynb
+++ b/colab-notebooks/notebook.ipynb
@@ -1,20 +1,129 @@
 {
- "cells": [
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(\"Hello World\")"
-   ]
-  }
- ],
- "metadata": {
-  "language_info": {
-   "name": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/lokeshdarla/cat-vs-dog/blob/main/colab-notebooks/notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# CAT vs DOG classifier\n",
+        "\n",
+        "data link [https://www.kaggle.com/datasets/salader/dogs-vs-cats](https://www.kaggle.com/datasets/salader/dogs-vs-cats)"
+      ],
+      "metadata": {
+        "id": "kTtfMc6W-QLP"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "! mkdir ~p ~/.kaggle\n",
+        "! cp kaggle.json ~/.kaggle/"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "o_cViH57_IIB",
+        "outputId": "129f8bc1-856c-404a-a116-f6cc376dc668"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "mkdir: cannot create directory ‘~p’: File exists\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!kaggle datasets download -d salader/dogs-vs-cats"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aB6U3W5A_EVF",
+        "outputId": "5c350a71-4df9-422a-e501-0575fb9290c9"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Warning: Your Kaggle API key is readable by other users on this system! To fix this, you can run 'chmod 600 /root/.kaggle/kaggle.json'\n",
+            "Dataset URL: https://www.kaggle.com/datasets/salader/dogs-vs-cats\n",
+            "License(s): unknown\n",
+            "Downloading dogs-vs-cats.zip to /content\n",
+            "100% 1.06G/1.06G [00:12<00:00, 98.0MB/s]\n",
+            "100% 1.06G/1.06G [00:12<00:00, 92.8MB/s]\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import zipfile\n",
+        "zip_ref = zipfile.ZipFile('/content/dogs-vs-cats.zip', 'r')\n",
+        "zip_ref.extractall('/content')\n",
+        "zip_ref.close()"
+      ],
+      "metadata": {
+        "id": "9yGE215T_mdg"
+      },
+      "execution_count": 5,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "kUHIag-v9e-t",
+        "outputId": "636cac12-7f4b-41f3-aef9-37da6cd035e8"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello World\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"Hello World\")"
+      ]
+    }
+  ],
+  "metadata": {
+    "language_info": {
+      "name": "python"
+    },
+    "colab": {
+      "provenance": [],
+      "include_colab_link": true
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
